<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hexon.stockchart.charts.CandleChart
        android:id="@+id/candle_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="32dp"
        android:background="@color/teal">
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            app:tabIndicatorFullWidth="false"
            app:tabMode="scrollable"
            app:tabGravity="center"
            app:tabTextAppearance="@style/TabLayoutTextAppearance"
            app:tabTextColor="@color/white"
            app:tabSelectedTextColor="@color/red"
            app:tabIndicatorColor="@color/hotpink"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/macd"
                android:contentDescription=""
                />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/kdj" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rsi" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/boll" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cci" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ema" />
        </com.google.android.material.tabs.TabLayout>

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            />
    </LinearLayout>
    <com.hexon.stockchart.charts.IndexChart
        android:id="@+id/index_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

</LinearLayout>